Fixed collapsed menu on mobile. Wasn't dropping down

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -25,7 +25,6 @@ body {
 /* Nav Bar */
 
 #girls-run-logo {
-    padding: .2rem;
     max-width: 100px;
     height: auto;
 }
